--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22nsWRmqFX%22%2C%2261551474205816%22%3A%2217fVnWJZ%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22OR9ubYTh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "datr",
-        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
         "key": "sb",
-        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
         "key": "ps_n",
@@ -50,88 +23,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
-        "key": "dpr",
-        "value": "1.500488042831421",
+        "key": "vpd",
+        "value": "v1%3B708x360x2.518298864364624",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
-        "key": "m_pixel_ratio",
-        "value": "1.500488042831421",
+        "key": "datr",
+        "value": "W1WnZvgZez30YpN2LMPXXIe1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "wd",
-        "value": "720x1329",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562963472651",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWVWyh7gvmerM52a0Zz98WzZoFs.BmuZOG..AAA.0.0.BmxIVT.AWWCMbN3dLc",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.268Z",
-        "lastAccessed": "2024-08-20T12:00:38.268Z"
-    },
-    {
-        "key": "xs",
-        "value": "32%3AUPXgGxTyZZLhUg%3A2%3A1724155219%3A-1%3A14749",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.269Z",
-        "lastAccessed": "2024-08-20T12:00:38.269Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2598%3Btimestamp%3A1724155222",
+        "value": "v2%3Bclient_version%3A2587%3Btimestamp%3A1723361450",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.269Z",
-        "lastAccessed": "2024-08-20T12:00:38.269Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100720484%3BT%3A28735920",
+        "key": "dpr",
+        "value": "2.7737884521484375",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-20T12:00:38.269Z",
-        "lastAccessed": "2024-08-20T12:00:38.269Z"
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
+    },
+    {
+        "key": "wd",
+        "value": "1060x2084",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61564630324835",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
+    },
+    {
+        "key": "xs",
+        "value": "10%3AJ4v615nvwtF0PA%3A2%3A1724312710%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
+    },
+    {
+        "key": "fr",
+        "value": "1fZHnbhsDHTjRmX0p.AWUxDxlFOXu5jMRTeM_JNJKJ0_o.BmvJgk..AAA.0.0.BmxuyI.AWWl38RJuXU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:45:56.260Z",
+        "lastAccessed": "2024-08-22T07:45:56.260Z"
     }
 ]
