--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "ps_n",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "datr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "dpr",
@@ -68,17 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
-    },
-    {
-        "key": "wd",
-        "value": "1060x2084",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "c_user",
@@ -86,25 +77,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "xs",
-        "value": "10%3AJ4v615nvwtF0PA%3A2%3A1724312710%3A-1%3A-1",
+        "value": "10%3AJ4v615nvwtF0PA%3A2%3A1724312710%3A-1%3A-1%3A%3AAcVjZpDGpQBkzjDqSsFEhrKbvNe3DS5ueo0s6njlFw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22lm3%22%3A%22u.61557670222046%22%2C%22t3%22%3A%5B%7B%22o%22%3A0%2C%22i%22%3A%22g.7399909853441718%22%7D%5D%2C%22utc3%22%3A1724313420811%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
+    },
+    {
+        "key": "wd",
+        "value": "1167x1339",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     },
     {
         "key": "fr",
-        "value": "1fZHnbhsDHTjRmX0p.AWUxDxlFOXu5jMRTeM_JNJKJ0_o.BmvJgk..AAA.0.0.BmxuyI.AWWl38RJuXU",
+        "value": "1c6Xdwdo1Pdh78top.AWXi1G6sFckXLYa54CFE8vf18Bc.Bmxu8Q..AAA.0.0.Bmxu9a.AWVyWFi-XOY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-22T07:45:56.260Z",
-        "lastAccessed": "2024-08-22T07:45:56.260Z"
+        "creation": "2024-08-22T07:57:32.452Z",
+        "lastAccessed": "2024-08-22T07:57:32.452Z"
     }
 ]
