--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWVrKL3mds7ukD_2W-ZteOOt7LM.BmuZOG..AAA.0.0.BmyGG8.AWVPETr3t6o",
+        "value": "0AbdJG6jOAE5DAe56.AWW5XCfYJiV_twO2UBsT0dCaJM8.BmuZOG..AAA.0.0.BmyGya.AWUjeN-kE3k",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "xs",
-        "value": "26%3AjmPjxoHnFlDAyQ%3A2%3A1724408252%3A-1%3A14749",
+        "value": "30%3AZx3NDSb_lWxxOA%3A2%3A1724411034%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2601%3Btimestamp%3A1724408256",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     },
     {
         "key": "fbl_st",
-        "value": "100727985%3BT%3A28740137",
+        "value": "101238556%3BT%3A28740183",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-23T10:17:49.404Z",
-        "lastAccessed": "2024-08-23T10:17:49.404Z"
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2601%3Btimestamp%3A1724411038",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-23T11:04:08.691Z",
+        "lastAccessed": "2024-08-23T11:04:08.691Z"
     }
 ]
